# internal/shared/infrastructure/http/constants.go
@@ -10,7 +10,7 @@ const (
 	APIV1Prefix = "/api/v1"
 
 	RouteWS          = "/ws"
-	RoutePing        = APIV1Prefix + "/ping"
+	RouteHealthz     = APIV1Prefix + "/healthz"
 	RouteDocs        = APIV1Prefix + "/docs"
 	RouteOpenAPISpec = "/openapi.yaml"
 	RouteFavicon     = "/favicon.ico"
